--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -12,6 +12,7 @@
   "author": "Carlos Azaustre <cazaustre@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
