--- a/part3/phonebook/backend/package.json
+++ b/part3/phonebook/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "logs:prod": "heroku logs --tail",
+    "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m 'ui-build' && npm run deploy"
   },
   "keywords": [],
   "author": "Carlos Azaustre <cazaustre@gmail.com>",
