--- a/part3/phonebook/backend/package.json
+++ b/part3/phonebook/backend/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1"
