--- a/part3/notes/backend/package.json
+++ b/part3/notes/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend"
+    "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m 'ui-build' && npm run deploy"
   },
   "author": "Carlos Azaustre <cazaustre@gmail.com>",
   "license": "MIT",
@@ -19,5 +21,8 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
+  },
+  "engines": {
+    "node": "10.3.0"
   }
 }
