--- a/part3/phonebook/backend/package.json
+++ b/part3/phonebook/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.4",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
