--- a/part3/phonebook/backend/package.json
+++ b/part3/phonebook/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "start": "node index.js",
     "watch": "nodemon index.js",
     "logs:prod": "heroku logs --tail",
@@ -23,6 +24,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^6.0.1",
     "nodemon": "^1.19.1"
   },
   "engines": {
