--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
+    "test": "jest --verbose",
     "watch": "nodemon index.js",
     "start": "node index.js"
   },
@@ -14,6 +16,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
