--- a/part4/notes/backend/package.json
+++ b/part4/notes/backend/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest --verbose",
-    "start": "node index.js",
-    "watch": "nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "rm -rf build && cd ../frontend/ && npm run build --prod && cp -r build ../backend",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m 'ui-build' && npm run deploy",
@@ -23,6 +23,7 @@
     "mongoose": "^5.6.4"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "eslint": "^6.0.1",
     "jest": "^24.8.0",
     "nodemon": "^1.19.0"
