--- a/part4/notes/backend/package.json
+++ b/part4/notes/backend/package.json
@@ -26,7 +26,8 @@
     "cross-env": "^5.2.0",
     "eslint": "^6.0.1",
     "jest": "^24.8.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "supertest": "^4.0.2"
   },
   "engines": {
     "node": "10.3.0"
