--- a/part4/blog/.env
+++ b/part4/blog/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://fullstack-mooc:OuEkX4RRpusfkK1106@cluster0-jkcft.mongodb.net/blog-app?retryWrites=true&w=majority
 PORT=3003
+
+TEST_MONGODB_URI=mongodb+srv://fullstack-mooc:OuEkX4RRpusfkK1106@cluster0-jkcft.mongodb.net/blog-app-test?retryWrites=true&w=majority
