--- a/part4/notes/backend/package.json
+++ b/part4/notes/backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "mongoose-unique-validator": "^2.0.3"
   },
