--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.5",
     "mongoose-unique-validator": "^2.0.3"
   }
