--- a/part5/notes/frontend/package.json
+++ b/part5/notes/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -12,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-jest": "^22.14.0",
     "json-server": "^0.15.0"
   },
   "proxy": "http://localhost:3001"
