--- a/part5/notes/frontend/package.json
+++ b/part5/notes/frontend/package.json
@@ -32,6 +32,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.7",
     "eslint-plugin-jest": "^22.14.0",
     "json-server": "^0.15.0"
   },
