--- a/part5/blog/frontend/package.json
+++ b/part5/blog/frontend/package.json
@@ -33,6 +33,8 @@
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.7",
     "eslint-plugin-jest": "^22.14.0"
   }
 }
