--- a/part5/notes/frontend/package.json
+++ b/part5/notes/frontend/package.json
@@ -14,7 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "coverage": "CI=true npm run test -- --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
